--- a/E-commerce/E-commerce/Views/Home/Index.cshtml
+++ b/E-commerce/E-commerce/Views/Home/Index.cshtml
@@ -1,8 +1,10 @@
-﻿@{
+﻿@model IEnumerable<Prodotto>
+
+@{
     ViewData["Title"] = "Home Page";
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">memEShop</h1>
+    <h2>Il tuo portale irriverente per i tuoi acquisti compulsivi!</h2>
 </div>
