--- a/E-commerce/E-commerce/Views/Home/Admin.cshtml
+++ b/E-commerce/E-commerce/Views/Home/Admin.cshtml
@@ -11,8 +11,8 @@
     <a class="btn btn-outline-success fs-5 mt-3" href="link alla pagina crea">Aggiungi nuovo prodotto allo shop</a>
 
 
-    <div class="row mt-3">
-        <h4>Elenco prodotti in vendita</h4>
+    <div class="row mt-3 border border-2 p-3 rounded">
+        <h4 class="text-center">Elenco prodotti in vendita</h4>
         @foreach (var prodotto in Model)
         {
             <div class="col-6 my-3">
