--- a/E-commerce/E-commerce/Views/Shared/_Layout.cshtml
+++ b/E-commerce/E-commerce/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - E_commerce</title>
+    <title>@ViewData["Title"] - memEShop</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
@@ -13,7 +13,8 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">E_commerce</a>
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSXLtVDuZwHJYkegyZqI7emjo2btz5hNP52rQ&s" alt="Alternate Text" style="width: 55px" />
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">memEShop</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
