--- a/E-commerce/E-commerce/Views/Home/Admin.cshtml
+++ b/E-commerce/E-commerce/Views/Home/Admin.cshtml
@@ -8,8 +8,7 @@
 <div class="container mt-4">
 
     <h1 class="display-4 text-center my-3">memEShop-ADMIN PAGE</h1>
-    <a class="btn btn-outline-success fs-5 mt-3" href="link alla pagina crea">Aggiungi nuovo prodotto allo shop</a>
-
+    <a class="btn btn-outline-success fs-5 mt-3" asp-controller="Products" asp-action="AggiungiProdotto">Aggiungi nuovo prodotto allo shop</a>
 
     <div class="row mt-3 border border-2 p-3 rounded">
         <h4 class="text-center">Elenco prodotti in vendita</h4>
