--- a/E-commerce/E-commerce/Views/Shared/_Layout.cshtml
+++ b/E-commerce/E-commerce/Views/Shared/_Layout.cshtml
@@ -14,7 +14,7 @@
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSXLtVDuZwHJYkegyZqI7emjo2btz5hNP52rQ&s" alt="Alternate Text" style="width: 55px" />
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">memEShop</a>
+                <a class="navbar-brand ms-3" asp-area="" asp-controller="Home" asp-action="Index">memEShop</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
