Non apre pagina del carrello

--- a/E-commerce/E-commerce/Views/Shared/_Layout.cshtml
+++ b/E-commerce/E-commerce/Views/Shared/_Layout.cshtml
@@ -27,8 +27,12 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Admin">Administrator</a>
                         </li>
+                        
                     </ul>
-                </div>
+                    
+                </div><span style="d-flex justify-content-center align-items-center">
+                    <i class="bi bi-cart"></i><a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Carrello">Carrello</a>
+                </span>
             </div>
         </nav>
     </header>
