--- a/E-commerce/E-commerce/Views/Home/Details.cshtml
+++ b/E-commerce/E-commerce/Views/Home/Details.cshtml
@@ -15,11 +15,17 @@
             <img src="@Model.ImmagineLink" alt="@Model.Nome" class="img-fluid" />
         </div>
         <div class="card-footer">
-            <form class="d-flex justify-content-between">
-                <select class="form-select w-25" aria-label="Seleziona la quantità">
+            <form asp-controller="Cart" asp-action="AggiungiAlCarrello" method="post" class="d-flex justify-content-between">
+                <input type="hidden" name="IDProdottoFK" value="@Model.IDProdotto" />
+                <input type="hidden" name="PrezzoFK" value="@Model.Prezzo" />
+                <input type="hidden" name="NomeFK" value="@Model.Nome" />
+                <select class="form-select w-25" name="Quantita" aria-label="Seleziona la quantità">
                     <option selected="1">1</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
+                    <option value="4">4</option>
+                    <option value="5">5</option>
+                    
                 </select>
                 <button type="submit" class="btn btn-secondary">Aggiungi al carrello</button>
             </form>
